kubernetes/kalium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kakitu-wallet-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kakitu-wallet-server
  template:
    metadata:
      labels:
        app: kakitu-wallet-server
    spec:
      containers:
      - name: kakitu-wallet-server
        image: replaceme
        command: ["/bin/sh", "-c"]
        args: ["kakitu-server"]
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 3000
          name: api
