kubernetes/kalium/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kakitu-wallet-server
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    name: api
  selector:
    app: kakitu-wallet-server
